Handled parsing of Long values for Instant
Signed-off-by: Owais Kazi <owaiskazi19@gmail.com>